--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta 
       name="description" 
-      content="Bean Vantage is the perfect meeting place near you. Enjoy premium coffee, cozy ambiance, and a great spot for business meetings or casual hangouts. Visit us today!" 
+      content="Bean Vantage is the perfect meeting place near you. Enjoy premium coffee and a great spot for business meetings or casual hangouts. Visit us today!" 
     />
 
     <meta 
@@ -39,17 +39,7 @@
     <meta name="twitter:image" content="https://beanvantage.vercel.app/twitter-image.jpg" />
 
     <link rel="icon" type="image/svg+xml" href="/coffee_logo.png" />
-
-    <link rel="preload" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" as="style" />
-    <link rel="preload" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" as="script" />
-
-    <link 
-      rel="stylesheet" 
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" 
-      integrity="sha384-..."
-      crossorigin="anonymous"
-    />
-
+    
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
