--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
 
     <title>Bean Vantage - Premium Coffee Shop & Meeting Place Near You</title>
 
-    <meta 
-      name="description" 
-      content="Bean Vantage is the perfect meeting place near you. Enjoy premium coffee and a great spot for business meetings or casual hangouts. Visit us today!" 
+    <title>Bean Vantage - Enjoy the Best Coffee & Meetings Near You</title>
+    <meta
+      name="description"
+      content="Visit our restobar and meeting place for freshly brewed coffee, artisanal espresso, and a cozy ambiance. Enjoy specialty coffee, vegan options, and more."
     />
-
-    <meta 
-      name="keywords" 
-      content="Restobar, meeting place, meeting place near me, coffee shop, premium coffee, business meetings, cozy café, coffee near me, café in visakhapatnam, beanvantage, bean, vantage" 
-    />
-
-    <link rel="canonical" href="https://beanvantage.vercel.app/" />
-
+    <meta
+      name="keywords"
+      content="Restobar, Meeting place, Coffee shop near me, Best coffee near me, Freshly brewed coffee, Specialty coffee shop, Artisanal coffee, Organic coffee, Cold brew coffee, Espresso bar, Best café in Visakhapatnam, Cozy coffee shop, Vegan coffee options, Gluten-free café menu, Coffee shop with free WiFi, Best coffee for remote work, Third-wave coffee shop, Instagrammable café, Aesthetic coffee shop, Quiet café for meetings, Latte art café, Local coffee roasters in Visakhapatnam, Sustainable coffee brands" />
+      <link rel="canonical" href="https://beanvantage.vercel.app/" />
+    
     <meta property="og:title" content="Bean Vantage - Premium Coffee Shop & Meeting Place Near You" />
     <meta 
       property="og:description" 
