--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta
       name="keywords"
-      content="Restobar, Meeting place, Coffee shop near me, Best coffee near me, Freshly brewed coffee, Specialty coffee shop, Artisanal coffee, Organic coffee, Cold brew coffee, Espresso bar, Best café in Visakhapatnam, Cozy coffee shop, Vegan coffee options, Gluten-free café menu, Coffee shop with free WiFi, Best coffee for remote work, Third-wave coffee shop, Instagrammable café, Aesthetic coffee shop, Quiet café for meetings, Latte art café, Local coffee roasters in Visakhapatnam, Sustainable coffee brands" />
+      content="Restobar, Meeting place, Coffee shop near me, Best coffee near me, Specialty coffee, Organic coffee, Cold brew, Espresso bar, Cozy café, Vegan coffee, Latte art, café in Visakhapatnam" />
       <link rel="canonical" href="https://beanvantage.vercel.app/" />
     
     <meta property="og:title" content="Bean Vantage - Premium Coffee Shop & Meeting Place Near You" />
