--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Bean Vantage - Enjoy the Best Coffee & Meetings Near You</title>
     <meta
       name="description"
-      content="Visit our restobar and meeting place for freshly brewed coffee, artisanal espresso, and a cozy ambiance. Enjoy specialty coffee, vegan options, and more."
-    />
+      content="Visit Bean Vantage, the best restobar and meeting place in Visakhapatnam! Enjoy freshly brewed coffee, artisanal espresso, specialty drinks, and a cozy ambiance."
+      />
     <meta
       name="keywords"
       content="Restobar, Meeting place, Coffee shop near me, Best coffee near me, Specialty coffee, Organic coffee, Cold brew, Espresso bar, Cozy café, Vegan coffee, Latte art, café in Visakhapatnam" />
